# jacopy-app

./: .gitignore  27_generalized_geometry.py  CONTRIBUTING.md  Makefile  README.md  plan.md  plan_faz18_frame_calc.md  pyproject.toml  requirements.txt
.venv311/: pyvenv.cfg
docs/: README.md
docs/tutorials/: 01_first_steps.ipynb  01_first_steps.md  02_jacobi_identity.ipynb  02_jacobi_identity.md  03_poisson_geometry.ipynb  03_poisson_geometry.md  04_lie_algebroid.ipynb  04_lie_algebroid.md  05_cartan_calculus.ipynb  05_cartan_calculus.md  06_custom_bracket.ipynb  06_custom_bracket.md  07_derived_bracket.ipynb  07_derived_bracket.md  08_unified_picture.ipynb  08_unified_picture.md  09_foundations.ipynb  09_foundations.md  10_diagnostics.ipynb  10_diagnostics.md  11_publication_output.ipynb  11_publication_output.md  12_schouten_nijenhuis.ipynb  12_schouten_nijenhuis.md  13_closure_axioms.ipynb  13_closure_axioms.md  14_problem_wrappers.ipynb  14_problem_wrappers.md  15_intrinsic_engine.ipynb  15_intrinsic_engine.md  16_phase_13_deep_dive.ipynb  16_phase_13_deep_dive.md  17_tilde_calculus.ipynb  17_tilde_calculus.md  18_derivator_identities.ipynb  18_derivator_identities.md  19_courant_family.ipynb  19_courant_family.md  20_connection_curvature.ipynb  20_connection_curvature.md  (+22 more)
examples/: cartan_magic_demo.py  kerr_demo.ipynb  kerr_demo.py
examples/Question 2/: 2a.ipynb  2b.ipynb  2c.ipynb  2d.ipynb  2e.ipynb  2f.ipynb  2g.ipynb
examples/Question 3/: 3.1.1.ipynb  3.1.2.ipynb  3.1.3.ipynb  3.1.4.ipynb  3.1.5.aux  3.1.5.ipynb  3.1.5.out  3.1.5.tex  3.1.6.ipynb
examples/Question 7/: 7.ipynb
examples/Question 8/: 8.ipynb
examples/Question 9/: 9.ipynb
jacopy/: __init__.py
(+255 files in other folders)
