[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jacopy"
version = "0.0.1"
description = "Symbolic computation for graded algebra, brackets, and Cartan calculus with step-by-step proofs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary, Source-Available, Personal Use Only" }
authors = [{ name = "Oğuzhan Selçuk", email = "stabledifgc@gmail.com" }]
keywords = [
    "graded algebra",
    "lie algebra",
    "poisson geometry",
    "schouten-nijenhuis",
    "koszul bracket",
    "courant algebroid",
    "cartan calculus",
    "symbolic computation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
test = ["pytest>=7.0"]
docs = [
    "nbformat>=5.0",
    "nbclient>=0.7",
    "ipykernel>=6.0",
]
components = ["sympy>=1.12"]
parallel = ["joblib>=1.3"]
dev = [
    "pytest>=7.0",
    "rich>=13.0",
    "nbformat>=5.0",
    "nbclient>=0.7",
    "ipykernel>=6.0",
    "sympy>=1.12",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jacopy*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
